2009-03-07  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el ([portability] getf): Redefine `getf' on Emacs21 to
	work on malformed plists like it does on later Emacsen. This made
	the `find-local-definitions' test case fail on Emacs21.

2009-03-04  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-check-fancy-symbol-name): Use
	`slime-test-expect' instead of `slime-check'.
	([test] fancy-symbol-names): Extend test case; check for
	"Foo" in #<Foo| {...}>.
	(slime-symbol-constituent-at-pos): Check for #<.

2009-03-04  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-wait-condition): Remove `save-excursion'; it
	made the `repl-test' test case fail because this test tries to set
	point to the new prompt in vain.

2009-03-03  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-pretty-package-name): Simplify.

2009-03-03  Helmut Eller  <heller@common-lisp.net>

	Use a separate key, C-c C-d #, to lookup reader-macros.

	* hyperspec.el (common-lisp-hyperspec-lookup-reader-macro): New
	command.
	(common-lisp-hyperspec-reader-macros): New variable.
	(common-lisp-hyperspec-reader-macro-at-point): Moved over from
	slime.el
	* slime.el (slime-doc-bindings): Bind C-c C-d #.
	(slime-hyperspec-lookup): Don't consider reader-macros.

2009-03-02  Tobias C. Rittweiler  <tcr@freebits.de>

	* hyperspec.el (common-lisp-hyperspec-symbols): Add entries for
	reader macros even when `common-lisp-hyperspec-symbol-table' is
	bound to some value.

2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el ([test] macroexpand): New test case.
	(slime-buffer-visible-p): New helper.
	(slime-execute-as-command): New helper.

2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* hyperspec.el (common-lisp-hyperspec-symbols): Add links to
	reader macros.

	* slime.el (slime-reader-macro-at-point): New function.
	(slime-hyperspec-lookup): Call it.

	Adapted from Stas Boukarev.

2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>
